--- a/public/index.html
+++ b/public/index.html
@@ -465,6 +465,7 @@
                     src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d20157.820257666164!2d4.3777668!3d50.8362106!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c3c4c83599ef97%3A0x14f381e79c97f818!2sZwembad%20VUB!5e0!3m2!1snl!2sbe!4v1615398052104!5m2!1snl!2sbe"
                     style="border:0;" allowfullscreen="" loading="lazy"></iframe>
             </div>
+            <!-- test -->
         </section>
     </main>
     <!-- <script src="app.js"></script> -->
