Testing automatic release

--- a/public/index.html
+++ b/public/index.html
@@ -81,7 +81,7 @@
             </div>
         </section>
         <section id="lessons">
-            <h1>About</h1>
+            <h1>AboutT</h1>
             <p>Are you a casual swimmer looking for a way to improve your swimming skills? A triathlete that could use a
                 technique upgrade? A student that just wants to learn to swim fluently?<br><br>
                 In short, you want to take your swimming technique and/or endurance to a higher level. Then you have
